manifests/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gvk-platform-dev
  labels:
    environment: development
    app: frontend-login
