manifests/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-dev
  namespace: gvk-platform-dev
  labels:
    app: frontend-login
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: frontend-login
    environment: dev
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
