manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-dev
  namespace: gvk-platform-dev
  labels:
    app: frontend-login
    environment: dev
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jain-dev.duckdns.org
    secretName: frontend-dev-tls
  rules:
  - host: jain-dev.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-dev
            port:
              number: 80
